--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <div class="card">
         <h4>Dexktop & Mobile Version</h4>
-        <p class="Drag & Drop Builder">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized.</p>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized.</p>
         </div>
 
 
