--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="teams-content">
         
-        <h3 class="teams-content-title"> <span class="Quick-list">Quick list</span> <span class="of-Our" >of Our</span>   <span class="text-features">Features</span> </h3>  
+        <h3 class="teams-content-title"> <span class="Quick-list">Quick list</span> <span class="of-Our">of Our</span> <br>  <span class="text-features">Features</span> </h3>  
         <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
          <button class="btn-primary">Explore More</button>
 
